[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regression-conformal-prediction-research-atlas"
version = "0.1.0"
description = "Research Atlas reproducibility package for regression conformal prediction experiments."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Emre Tasar", email = "detasar@gmail.com"}
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "pyyaml>=6.0",
  "matplotlib>=3.7",
  "loguru>=0.7",
]

[project.optional-dependencies]
test = [
  "pytest>=7.4",
]
optional-models = [
  "xgboost>=2.0",
  "lightgbm>=4.0",
  "catboost>=1.2",
]

[tool.setuptools]
package-dir = {"" = "reproducibility"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["reproducibility"]
include = ["cpfi*", "experiments*"]
namespaces = true

[tool.setuptools.package-data]
"experiments.regression" = ["configs/*.yaml", "configs/*.yml", "policies/*.md"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["reproducibility/tests/test_public_research_atlas_smoke.py"]
markers = [
  "unit: fast deterministic tests for local code paths",
  "artifact_public: tests for public Research Atlas artifacts",
  "smoke: minimal public smoke tests",
  "external_data: tests requiring external data access",
  "private_artifact: tests requiring private ledgers, caches, or nonredistributable artifacts",
  "slow: long-running tests or reruns",
]
